Fix too tall cards

--- a/design-system/components/card/singCard.scss
+++ b/design-system/components/card/singCard.scss
@@ -67,7 +67,7 @@
     .sing-card-image {
       height: 100%;
       width: 100%;
-      padding-bottom: 56.25%;
+      //padding-bottom: 56.25%;
       position: relative;
 
       .read-time-badge {
